# test-openGL

./: .gitignore  CMakeLists.txt
Test/Header/: Camera.h  Camera2.h  LoadShader.h  LoadTexture.h  Model.h  Renderer.h  Renderer2.h  Shader.h  Window.h  objLoader.h
Test/Source/: CMakeLists.txt  Camera.cpp  Camera2.cpp  LoadShader.cpp  LoadTexture.cpp  Model.cpp  Renderer.cpp  Renderer2.cpp  Shader.cpp  Window.cpp  main.cpp  objLoader.cpp
